--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
     "axios": "^1.7.7",
+    "framer-motion": "^12.6.2",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-datepicker": "^7.5.0",
